# personal-spending

./: README.md  main.py  pyproject.toml
.github/workflows/: fly-deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  render.yaml
backend/src/: auth.py  constants.py  password_utils.py  plaid_client.py  routes.py  schemas.py
backend/src/api/: routes.py
backend/src/db/: db.py  models.py
backend/src/db/crud/: item.py  transactions.py  users.py  vendor_rules.py
backend/src/scripts/: add_excluded_column.py  add_linked_column.py  add_users_table.py  add_vendor_rules_table.py  backfill_transactions.py  create_user.py  fix_null_categories.py  migrate_categories.py  test_reconnect.py  try_transactions_get.py  unlink_all.py
backend/src/services/: plaid_client.py  transactions_sync.py
frontend/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/login/: page.tsx
frontend/components/: AddBankModal.tsx  ThemeToggle.tsx
frontend/components/transactions/: BankSelector.tsx  MonthSelector.tsx  SpendingChart.tsx  TransactionCard.tsx  TransactionList.tsx
frontend/contexts/: ThemeContext.tsx
frontend/lib/: auth.ts  plaid.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/plaid/oauth-return/: page.tsx
frontend/src/app/transactions/: page.tsx
frontend/types/: transactions.tsx
src/: plaid_client.py  routes.py
