[tool.poetry]
name = "personal-spending"
version = "0.1.0"
description = "Personal spending with plaid"
authors = ["Johnny Kantaros <jkantaros2@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
Flask = "3.0.0"
plaid-python = "28.0.0"
python-dotenv = "0.15.0"
itsdangerous = "2.1.2"
werkzeug = "3.1.3"
fastapi = "^0.110.0"
sqlmodel = ">=0.0.24"
aiosqlite = ">=0.21.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"