[tool.poetry]
name = "personal-spending"
version = "0.1.0"
description = "Personal spending with plaid"
authors = ["Johnny Kantaros <jkantaros2@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
plaid-python = "28.0.0"
python-dotenv = "^1.0.0"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.9.0"
pyjwt = "^2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"